feat: admin functionality on frontend, refactor backend
