# backend/routes/adminRoutes.js
@@ -1,5 +1,5 @@
 const express = require("express");
-const NodeTypes = require("../utils/constants");
+const { NODE_TYPES } = require("../utils/constants");
 const isAuth = require("../middlewares/isAuth");
 const isAdmin = require("../middlewares/isAdmin");
 const { body } = require("express-validator");
@@ -8,9 +8,12 @@ const {
   getUsersHandler,
   getNodesHandler,
   resetNodeHandler,
+  getAdminIDsHandler,
 } = require("../controllers/adminController");
 
 const router = express.Router();
+
+router.get("/ids", isAuth, getAdminIDsHandler);
 
 router.get("/nodes", isAuth, isAdmin, getNodesHandler);
 
@@ -20,7 +23,7 @@ router.post(
   "/nodes",
   isAuth,
   isAdmin,
-  [body("type").isIn(NodeTypes)],
+  [body("type").isIn(NODE_TYPES)],
   createNodeHandler
 );
 
