# backend/routes/userRoutes.js
@@ -1,5 +1,9 @@
 const express = require("express");
+const isAuth = require("../middlewares/isAuth");
+const { getUserByIdHandler } = require("../controllers/userController");
 
 const router = express.Router();
+
+router.get("/:user_id", isAuth, getUserByIdHandler);
 
 module.exports = router;
